# Httpd-BSDSock

./: .gitignore  CMakeLists.txt  README.md  utility.sh
includes/meta/: helpers.hpp
includes/mydriver/: driver.hpp  entry_job.hpp  task_queue.hpp  worker_job.hpp
includes/myhttp/: intake.hpp  outtake.hpp  types.hpp
includes/mysock/: buffers.hpp  configure.hpp  sockets.hpp
includes/utilities/: mycaching.hpp
includes/utilities/url/: lexing.hpp  model.hpp  parsing.hpp
src/: CMakeLists.txt  main.cpp
src/mydriver/: CMakeLists.txt  driver.cpp  entry_job.cpp  task_queue.cpp  worker_job.cpp
src/myhttp/: CMakeLists.txt  intake.cpp  outtake.cpp  types.cpp
src/mysock/: CMakeLists.txt  configure.cpp  sockets.cpp
src/utilities/: CMakeLists.txt  mycaching.cpp  url_lexing.cpp  url_parsing.cpp
tests/: CMakeLists.txt  test_url_parse.cpp
