add_executable(test_url_parse)
target_include_directories(test_url_parse PUBLIC ${MY_INCS})
target_link_directories(test_url_parse PRIVATE ${MY_LIBS})
target_sources(test_url_parse PRIVATE test_url_parse.cpp)
target_link_libraries(test_url_parse PRIVATE utilities PRIVATE )
add_test(NAME test_url_parse COMMAND "$<TARGET_FILE:test_url_parse>")
